fix: improve footer, add full-bleed support, headshots on mobile (#45)
* fix: remove unneeded wp_get_attachment_image filter
* fix: correct selector for ILM overview colors
* fix: add space between sections on mobile footer
* fix: remove whitespace above footer on mobile
* fix: on mobile footer, decrease space below header
* fix: ensure headshots are consistent width on mobile
* fix: allow full-bleed to work on any div, not just named ones
* fix: remove gutter around hero image on mobile

--- a/assets/css/main.src.css
+++ b/assets/css/main.src.css
@@ -137,8 +137,7 @@ html body .tg-icon {
 
 .entry-content > div:not(.full-bleed),
 .hero-image .wp-block-columns,
-.how-it-works.full-bleed > *,
-.announcement.full-bleed > *,
+.full-bleed:not(.hero-image) > *,
 .tg-header-sticky-wrapper .tg-header-container {
   max-width: 1200px;
   margin: 0 auto;
@@ -146,8 +145,7 @@ html body .tg-icon {
 @media screen and (max-width: 992px) {
   .entry-content > div:not(.full-bleed),
   .hero-image .wp-block-columns,
-  .how-it-works.full-bleed > *,
-  .announcement.full-bleed > *,
+  .full-bleed:not(.hero-image) > *,
   .tg-header-sticky-wrapper .tg-header-container {
     max-width: 100%;
   }
@@ -361,14 +359,22 @@ header.tg-page-header.tg-page-header--left-right {
 .tg-site-footer section {
   margin-bottom: 0;
 }
+@media screen and (max-width: 768px) {
+  .tg-site-footer .tg-footer-widget-container > div:first-child h3 {
+    margin-top: 0;
+  }
+}
 .tg-site-footer h3 {
   color: white;
   text-transform: uppercase;
   font-size: 1rem;
   font-weight: bold;
 }
-.tg-site-footer .tg-site-footer {
-  margin: 5rem 0;
+@media screen and (max-width: 768px) {
+  .tg-site-footer h3 {
+    margin-bottom: 0.5rem;
+    margin-top: 3rem;
+  }
 }
 
 .tg-icon-arrow-up::after {
@@ -400,6 +406,11 @@ header.tg-page-header.tg-page-header--left-right {
 .wp-block-group.who-terraso-is-for .terraso-users .country {
   text-transform: uppercase;
   color: #333;
+}
+@media screen and (max-width: 768px) {
+  .wp-block-group.who-terraso-is-for .terraso-users figure {
+    width: 224px;
+  }
 }
 .wp-block-group.how-it-works ul {
   list-style: none;
@@ -483,27 +494,27 @@ header.tg-page-header.tg-page-header--left-right {
   box-shadow: 2px 2px 2px 2px rgba(227, 227, 227, 0.5);
 }
 
-.ilm-group .wp-block-group:nth-child(1),
+.ilm-group.wp-block-group:nth-child(1),
 .ilm-list li:nth-child(1) {
   border-color: #5e5547;
 }
 
-.ilm-group .wp-block-group:nth-child(2),
+.ilm-group.wp-block-group:nth-child(2),
 .ilm-list li:nth-child(2) {
   border-color: #f99d1c;
 }
 
-.ilm-group .wp-block-group:nth-child(3),
+.ilm-group.wp-block-group:nth-child(3),
 .ilm-list li:nth-child(3) {
   border-color: #ffcd03;
 }
 
-.ilm-group .wp-block-group:nth-child(4),
+.ilm-group.wp-block-group:nth-child(4),
 .ilm-list li:nth-child(4) {
   border-color: #028843;
 }
 
-.ilm-group .wp-block-group:nth-child(5),
+.ilm-group.wp-block-group:nth-child(5),
 .ilm-list li:nth-child(5) {
   border-color: #00344d;
 }
@@ -535,8 +546,20 @@ header.tg-page-header.tg-page-header--left-right {
 .home .hero-image a {
   color: white;
 }
+@media screen and (max-width: 768px) {
+  .home .hero-image {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .home .hero-image .login-join {
+    padding-left: 0;
+  }
+}
 
 /* remove whitespace below main content area */
+#primary.content-area {
+  margin-bottom: 0;
+}
 #primary .entry-content {
   margin-bottom: 0;
 }
